Fix the alignment issue [http://goo.gl/5zjcC]

--- a/web/less/frontend/_header.less
+++ b/web/less/frontend/_header.less
@@ -91,7 +91,6 @@ a.sing-up-now-btn, a.my-account-btn {
 	text-indent: -9999px;
 	vertical-align: middle;
 	outline: none;
-	margin-top: -4px;
 }
 
 .my-account-btn {
